--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,6 @@
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
-
-
         <activity
             android:name=".register.RegisterActivity"
             android:exported="false" />
@@ -30,7 +28,8 @@
             android:exported="false" />
         <activity
             android:name=".home.HomeActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
 
             <activity
                 android:name=".splash.SplashActivty"
@@ -42,7 +41,9 @@
         </activity>
     <activity
         android:name=".MainActivity"
-        android:exported="true"/>
+        android:exported="true"
+        android:windowSoftInputMode="adjustResize"
+        />
     </application>
 
 </manifest>
